# comp-quicktool-rs

./: Cargo.toml
scripts/: install.sh  install_dp1091.sh
src/: cli.rs  config.rs  main.rs  shell.rs
src/tools/: autotest.rs  fetch_activity.rs  mod.rs
