[package]
name = "quicktool-rs"
version = "0.1.0"
edition = "2021"
description = "Tool to alter environment for easy access to class specific commands"

[[bin]]
name = "quicktool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.6"
log = "0.4.26"
regex = "1.11.1"
serde_json = "1.0"
walkdir = "2.5.0"
